I made the Velocity thing configurable, and changed some stuff there too